--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,15 @@
     <packaging>jar</packaging>
 
     <name>NightRush</name>
-    <description>Plugin Minecraft NightRush 1.8+</description>
+    <description>Plugin Minecraft NightRush 1.8+ compilé en Java 17</description>
     <url>https://github.com/wMidas2/NightRush</url>
 
     <properties>
         <java.version>17</java.version>
+        <spigot.api.version>1.18.2-R0.1-SNAPSHOT</spigot.api.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <repositories>
@@ -28,49 +30,27 @@
     </repositories>
 
     <dependencies>
-        <!-- Spigot API 1.8.8 -->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>${spigot.api.version}</version>
             <scope>provided</scope>
         </dependency>
-
-        <!-- Si tu utilises d'autres libs, les ajouter ici -->
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Compiler plugin -->
+            <!-- Plugin de compilation -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <encoding>UTF-8</encoding>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
-
-            <!-- Plugin Shade pour créer un jar “fat” si besoin -->
-            <!-- Ici optionnel, mais utile si tu inclus des dépendances -->
-            <!--
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals><goal>shade</goal></goals>
-                        <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            -->
         </plugins>
     </build>
 
